--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=example
+      - MYSQL_DATABASE=paymaster
 
   mongodb:
     image: mongo:latest
     environment:
-      - MONGODB_DATABASE="example"
+      - MONGODB_DATABASE="paymaster"
     ports:
       - 27017:27017
 
