--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@multiversx/sdk-nestjs-rabbitmq": "^1.0.0",
     "@multiversx/sdk-nestjs-redis": "^1.0.0",
     "@multiversx/sdk-network-providers": "^1.4.0",
+    "@multiversx/sdk-transaction-decoder": "^1.0.2",
     "@multiversx/sdk-transaction-processor": "^0.1.29",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.4.0",
@@ -99,6 +100,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "9.4.0",
     "agentkeepalive": "^4.3.0",
+    "bignumber.js": "^9.1.2",
     "bull": "^4.10.4",
     "cache-manager": "^5.2.1",
     "cookie-parser": "^1.4.6",
