--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@multiversx/sdk-network-providers": "^1.4.0",
     "@multiversx/sdk-transaction-decoder": "^1.0.2",
     "@multiversx/sdk-transaction-processor": "^0.1.29",
+    "@multiversx/sdk-wallet": "^4.2.0",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
