--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
     "bignumber.js": "^9.1.2",
     "bull": "^4.10.4",
     "cache-manager": "^5.2.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
