--- a/apps/api/config/config.devnet.yaml
+++ b/apps/api/config/config.devnet.yaml
@@ -38,4 +38,7 @@ relayer:
   address: 'erd1vcw3y2x7fphcmddy77ef2n8nzz792d5m7xmupczc6ccaus40hytsz4fcty'
   pemFilePath: 'apps/api/src/wallets/relayerWallet.pem'
   flatFeeEGLD: '15000000000000000'
-wrappedEGLDIdentifier: 'WEGLD-a28c59'
+tokens:
+  - USDC-350c4e:
+      feePercentage: 0.23
+      feeAmount: '150000000000'
