--- a/apps/api/config/config.devnet.yaml
+++ b/apps/api/config/config.devnet.yaml
@@ -20,6 +20,9 @@ features:
     port: 4000
   keepAliveAgent:
     enabled: true
+  swap:
+    enabled: true
+    cron: '* * * * *'
 nativeAuth:
   maxExpirySeconds:
   acceptedOrigins:
@@ -46,3 +49,6 @@ tokens:
   - RIDE-05b1bb:
       feePercentage: 5
       feeAmount: '0'
+      swapContract: 'erd1qqqqqqqqqqqqqpgqw382rcxku8adtwahlq2pdstdvfwf4wa72jpssz8c8s'
+      swapParameters: 'swapTokensFixedInput@WEGLD-bd4d79@0'
+      swapMinAmount: '1000000000000'
