--- a/apps/api/config/config.devnet.yaml
+++ b/apps/api/config/config.devnet.yaml
@@ -49,6 +49,7 @@ tokens:
   - RIDE-05b1bb:
       feePercentage: 5
       feeAmount: '0'
-      swapContract: 'erd1qqqqqqqqqqqqqpgqw382rcxku8adtwahlq2pdstdvfwf4wa72jpssz8c8s'
-      swapParameters: 'swapTokensFixedInput@WEGLD-bd4d79@0'
+      swapContract: 'erd1qqqqqqqqqqqqqpgqpvfd0cuspuewm9z9p6lcmp66ylqg4js30n4sj2rjwh'
+      swapParameters: 'swapTokensFixedInput@WEGLD-a28c59@01'
       swapMinAmount: '1000000000000'
+      swapGasLimit: 12050000
