--- a/apps/api/config/config.mainnet.yaml
+++ b/apps/api/config/config.mainnet.yaml
@@ -40,6 +40,9 @@ redlock:
   retryInterval: 1000
 paymaster:
   contractAddress:
+    shard0:
+    shard1:
+    shard2:
   gasLimit: 10000000
 relayer:
   address:
