--- a/apps/api/config/config.testnet.yaml
+++ b/apps/api/config/config.testnet.yaml
@@ -40,10 +40,44 @@ redlock:
   retryInterval: 1000
 paymaster:
   contractAddress:
+    shard0: 'erd1qqqqqqqqqqqqqpgqwjrz8tjg2s4yuhpm7krw9d3n45ty3j0qnk6qnr2cm7'
+    shard1: 'erd1qqqqqqqqqqqqqpgqmvwpu8qx4c3umveamvswmuuxhf5lsmj5s3ssrhh2ed'
+    shard2: 'erd1qqqqqqqqqqqqqpgq0hdtg9mwf4hec826ykpdunl06885akw9dheq9n2unq'
   gasLimit: 10000000
 relayer:
-  address:
-  pemFilePath:
+  address: 'erd17sd553s8cff7hulr33ej27z8435scyxpljdmv8u5a6hh0gpwvaxqsw04lu'
+  pemFilePath: 'apps/api/wallets/relayerWallet_shard0.pem'
   name:
-wrappedEGLDIdentifier:
+wrappedEGLDIdentifier: 'WEGLD-01e49d'
 tokens:
+  - USDC-f89dfe:
+      feePercentage: 3
+      feeAmount: '10000'
+  - RIDE-3954e7:
+      feePercentage: 5
+      feeAmount: '0'
+      swapContract: 'erd1qqqqqqqqqqqqqpgq5dkvkrn56yrgavwx8fm9ld9eqj07g7ps295qchle4z'  #shard0
+      swapParameters: 'swapTokensFixedInput@WEGLD-01e49d@01'
+      swapMinAmount: '2000000000000000000'
+      swapGasLimit: 12050000
+  - WEGLD-01e49d:
+      feePercentage: 5
+      feeAmount: '0'
+      swapContract: 'erd1qqqqqqqqqqqqqpgqfy4z88duqdusaksn399f4dny527m6xe07h0sll0m2t'
+      swapParameters: 'unwrapEgld'
+      swapMinAmount: '50000000000000000'
+      swapGasLimit: 4200000
+  - ASH-3538e0:
+      feePercentage: 5
+      feeAmount: '1000000'
+      swapContract: 'erd1qqqqqqqqqqqqqpgq64cxskker47fd9spaetc6vylt2c3kmm7295qx2hu6j'
+      swapParameters: 'swapTokensFixedInput@WEGLD-01e49d@01'
+      swapMinAmount: '50000000000000000'
+      swapGasLimit: 12050000
+  - ITHEUM-471743:
+      feePercentage: 5
+      feeAmount: '1000000'
+      swapContract: 'erd1qqqqqqqqqqqqqpgqkdxw8ewquxtt64t8rmdgqz3ja0zjycfm295qpdm8at'
+      swapParameters: 'swapTokensFixedInput@WEGLD-01e49d@01'
+      swapMinAmount: '1000000000000'
+      swapGasLimit: 12050000
