--- a/.github/workflows/unit.tests.yml
+++ b/.github/workflows/unit.tests.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci
+      - run: npm run copy-devnet-config
       - run: npm run build:all
       - run: npm test
       - name: Collect code coverage
