--- a/.github/workflows/unit.tests.yml
+++ b/.github/workflows/unit.tests.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run test:cov
       - uses: codecov/codecov-action@v3
         with:
-          files: ./coverage/unit/clover.xml
+          files: ./coverage/clover.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
