--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ lerna-debug.log*
 apps/api/src/wallets/
 
 apps/api/wallets/
+
+# .env files
+.env
+**/*/config/.env.devnet
+**/*/config/.env.testnet
+**/*/config/.env.mainnet
+**/*/config/.env.custom
