--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "build": "nest build",
     "build:all": "nest build api && nest build common",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:devnet": "npm run copy-devnet-config & nest build api & nest start",
-    "start:devnet:watch": "npm run copy-devnet-config & nest build api & nest start --watch",
-    "start:devnet:debug": "npm run copy-devnet-config & nest build api & nest start --watch --debug",
-    "start:testnet": "npm run copy-testnet-config & nest build api &  nest start",
-    "start:testnet:watch": "npm run copy-testnet-config & nest build api & nest start --watch",
-    "start:testnet:debug": "npm run copy-testnet-config & nest build api & nest start --watch --debug",
-    "start:mainnet": "npm run copy-mainnet-config & nest build api & nest start",
-    "start:custom": "npm run copy-custom-config & nest build api & nest start",
-    "start:custom:watch": "npm run copy-custom-config & nest build api & nest start --watch",
-    "start:custom:debug": "npm run copy-custom-config & nest build api & nest start --watch --debug",
+    "start:devnet": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start",
+    "start:devnet:watch": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start --watch",
+    "start:devnet:debug": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start --watch --debug",
+    "start:testnet": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api &  nest start",
+    "start:testnet:watch": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api & nest start --watch",
+    "start:testnet:debug": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api & nest start --watch --debug",
+    "start:mainnet": "npm run create-mainnet-env && npm run copy-mainnet-env & npm run copy-mainnet-config & nest build api & nest start",
+    "start:custom": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start",
+    "start:custom:watch": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start --watch",
+    "start:custom:debug": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start --watch --debug",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --detectOpenHandles --forceExit --logHeapUsage --maxWorkers=2",
@@ -30,7 +30,15 @@
     "copy-devnet-config": "cp ./apps/api/config/config.devnet.yaml ./apps/api/config/config.yaml",
     "copy-testnet-config": "cp ./apps/api/config/config.testnet.yaml ./apps/api/config/config.yaml",
     "copy-mainnet-config": "cp ./apps/api/config/config.mainnet.yaml ./apps/api/config/config.yaml",
-    "copy-custom-config": "cp ./apps/api/config/config.custom.yaml ./apps/api/config/config.yaml"
+    "copy-custom-config": "cp ./apps/api/config/config.custom.yaml ./apps/api/config/config.yaml",
+    "create-devnet-env": "test -f ./apps/api/config/.env.devnet || cp .env.example ./apps/api/config/.env.devnet",
+    "create-testnet-env": "test -f ./apps/api/config/.env.testnet || cp .env.example ./apps/api/config/.env.testnet",
+    "create-mainnet-env": "test -f ./apps/api/config/.env.mainnet || cp .env.example ./apps/api/config/.env.mainnet",
+    "create-custom-env": "test -f ./apps/api/config/.env.custom || cp .env.example ./apps/api/config/.env.custom",
+    "copy-devnet-env": "cp ./apps/api/config/.env.devnet ./.env",
+    "copy-testnet-env": "cp ./apps/api/config/.env.testnet ./.env",
+    "copy-mainnet-env": "cp ./apps/api/config/.env.mainnet ./.env",
+    "copy-custom-env": "cp ./apps/api/config/.env.custom ./.env"
   },
   "dependencies": {
     "@multiversx/sdk-core": "^12.2.1",
