--- a/apps/api/config/config.mainnet.yaml
+++ b/apps/api/config/config.mainnet.yaml
@@ -6,21 +6,30 @@ urls:
 features:
   publicApi:
     enabled: true
-    port: 3000
+    port: ${num:PUBLIC_API_PORT}
   privateApi:
     enabled: true
-    port: 4000
+    port: ${num:PRIVATE_API_PORT}
   keepAliveAgent:
     enabled: true
   swap:
     enabled: true
     cron: '* * * * *'
+    port: ${num:AUTO_SWAP_PORT}
+  drainProtection:
+    enabled: true
+    cron: '*/20 * * * * *'
+    port: ${num:DRAIN_PROTECTION_PORT}
+    addressIntervalInMinutes: 120
+    addressMaxFailedTxsPerInterval: 5 
+    totalIntervalInMinutes: 10
+    totalMaxFailedTxsPerInterval: 10 
 nativeAuth:
   maxExpirySeconds:
   acceptedOrigins:
     - utils.multiversx.com
 security:
-  admins: ${SECURITY_ADMINS}
+  admins: ${arr:SECURITY_ADMINS}
 rateLimiterSecret: ${RATE_LIMITER_SECRET}
 keepAliveTimeout:
   downstream: 61000
@@ -28,11 +37,11 @@ keepAliveTimeout:
 useCachingInterceptor: false
 redis:
   host: ${REDIS_HOST}
-  port: ${REDIS_PORT}
+  port: ${num:REDIS_PORT}
   username: ${REDIS_USERNAME}
   password: ${REDIS_PASSWORD}
-  tls: ${REDIS_TLS}
-globalPrefix: ''
+  tls: ${bool:REDIS_TLS}
+globalPrefix: ${GLOBAL_PREFIX}
 redlock:
   keyExpiration: 60000
   maxRetries: 50
@@ -44,7 +53,7 @@ paymaster:
     shard2:
   gasLimit: 10000000
 relayer:
-  pemFilePath: 'apps/api/wallets/relayerWallet_3.pem'
+  pemFilePath: ${RELAYER_PEM_PATH}
   name:
 wrappedEGLDIdentifier:
 tokens:
