--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 API_URL=https://devnet-api.multiversx.com
 
+MVX_OVERRIDE_URLS_SWAGGER=arr:str:http://localhost:3000
+
+PUBLIC_API_PORT=3000
+PRIVATE_API_PORT=4000
+
+AUTO_SWAP_PORT=7777
+DRAIN_PROTECTION_PORT=7778
+
 SECURITY_ADMINS=
 
 RATE_LIMITER_SECRET=
@@ -9,5 +17,7 @@ REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
 REDIS_TLS=false
+
+GLOBAL_PREFIX=
 
 RELAYER_PEM_PATH=
