update prefix for redis keys

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,11 @@ SECURITY_ADMINS=
 
 RATE_LIMITER_SECRET=
 
-REDIS_HOST='127.0.0.1'
-REDIS_PORT=6379
-REDIS_USERNAME=
-REDIS_PASSWORD=
-REDIS_TLS=false
+PM_REDIS_HOST='127.0.0.1'
+PM_REDIS_PORT=6379
+PM_REDIS_USERNAME=
+PM_REDIS_PASSWORD=
+PM_REDIS_TLS=false
 
 GLOBAL_PREFIX=
 
