--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "build": "nest build",
     "build:all": "nest build api && nest build common",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:devnet": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start",
-    "start:devnet:watch": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start --watch",
-    "start:devnet:debug": "npm run create-devnet-env && npm run copy-devnet-env & npm run copy-devnet-config & nest build api & nest start --watch --debug",
-    "start:testnet": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api &  nest start",
-    "start:testnet:watch": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api & nest start --watch",
-    "start:testnet:debug": "npm run create-testnet-env && npm run copy-testnet-env & npm run copy-testnet-config & nest build api & nest start --watch --debug",
-    "start:mainnet": "npm run create-mainnet-env && npm run copy-mainnet-env & npm run copy-mainnet-config & nest build api & nest start",
-    "start:custom": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start",
-    "start:custom:watch": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start --watch",
-    "start:custom:debug": "npm run create-custom-env && npm run copy-custom-env & npm run copy-custom-config & nest build api & nest start --watch --debug",
+    "start:devnet": "npm run create-devnet-env && npm run copy-devnet-env & nest build api & NODE_ENV=devnet nest start",
+    "start:devnet:watch": "npm run create-devnet-env && npm run copy-devnet-env & nest build api & NODE_ENV=devnet nest start --watch",
+    "start:devnet:debug": "npm run create-devnet-env && npm run copy-devnet-env & nest build api & NODE_ENV=devnet nest start --watch --debug",
+    "start:testnet": "npm run create-testnet-env && npm run copy-testnet-env & nest build api & NODE_ENV=testnet nest start",
+    "start:testnet:watch": "npm run create-testnet-env && npm run copy-testnet-env & nest build api & NODE_ENV=testnet nest start --watch",
+    "start:testnet:debug": "npm run create-testnet-env && npm run copy-testnet-env & nest build api & NODE_ENV=testnet nest start --watch --debug",
+    "start:mainnet": "npm run create-mainnet-env && npm run copy-mainnet-env & nest build api & NODE_ENV=mainnet nest start",
+    "start:custom": "npm run create-custom-env && npm run copy-custom-env & nest build api & NODE_ENV=custom nest start",
+    "start:custom:watch": "npm run create-custom-env && npm run copy-custom-env & nest build api & NODE_ENV=custom nest start --watch",
+    "start:custom:debug": "npm run create-custom-env && npm run copy-custom-env & nest build api & NODE_ENV=custom nest start --watch --debug",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --detectOpenHandles --forceExit --logHeapUsage --maxWorkers=2",
